<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvCARD_PEGAWAI"
        app:cardCornerRadius="15dp"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCARD_PEGAWAI_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#7C9D96"
                android:padding="10dp"
                android:text="@string/tvCARD_PEGAWAI_ID"
                android:textColor="@color/white"
                android:textSize="20sp" />
            <TextView
                android:id="@+id/tvCARD_PEGAWAI_NAMA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCARD_PEGAWAI_NAMA"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/tvCARD_PEGAWAI_ALAMAT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCARD_PEGAWAI_ALAMAT"
                android:textSize="20sp"
                android:layout_marginTop="6dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>
            <TextView
                android:id="@+id/tvCARD_PEGAWAI_NOHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NoHP"
                android:textSize="20sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/tvCARD_PEGAWAI_TERDAFTAR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCARD_PEGAWAI_TERDAFTAR"
                android:textSize="20sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/tvCARD_PEGAWAI_CABANG"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCARD_PEGAWAI_CABANG"
                android:textSize="20sp"
                android:layout_marginTop="4dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btHUBUNGI"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#7C96AB"
                    android:text="@string/btHUBUNGI"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/btLIHAT"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"
                    android:backgroundTint="#A59D84"
                    android:text="@string/btLIHAT"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>