<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cvCARD_PELANGGAN"
    app:cardCornerRadius="15dp"
    android:layout_margin="5dp"
    android:layout_marginTop="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_ID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#7189BF"
            android:padding="10dp"
            android:text="@string/tvCARD_PELANGGAN_ID"
            android:textColor="@color/white"
            android:textSize="20sp" />
        <TextView
            android:id="@+id/tvCARD_PELANGGAN_NAMA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCARD_PELANGGAN_NAMA"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_ALAMAT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvCARD_PELANGGAN_ALAMAT"
            android:textSize="20sp"
            android:layout_marginTop="6dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"/>

        <TextView
            android:id="@+id/tvCARD_PELANGGAN_NOHP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/NoHP"
            android:textSize="20sp"
            android:layout_marginTop="4dp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>
