<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".layanan.TambahLayananActivity">

        <TextView
            android:id="@+id/tvTambah_Layanan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvTambah_Layanan"
            android:textAlignment="center"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="15dp" />

        <TextView
            android:id="@+id/tvLayanan_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLayanan_Nama"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTambah_Layanan"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="15dp"/>

        <EditText
            android:id="@+id/etLayanan_Nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etLayanan_Nama"
            android:padding="12dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLayanan_Nama"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:background="@drawable/border"
            android:inputType="text"/>

        <TextView
            android:id="@+id/tvLayanan_Harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvLayanan_Harga"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLayanan_Nama"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"/>

        <EditText
            android:id="@+id/etLayanan_Harga"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etLayanan_Harga"
            android:background="@drawable/border"
            android:padding="12dp"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLayanan_Harga"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:inputType="number"
            android:maxLength="6"/>

        <TextView
            android:id="@+id/tvNama_Cabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvNama_Cabang"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etLayanan_Harga"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"/>

        <EditText
            android:id="@+id/etNama_Cabang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etNama_Cabang"
            android:textSize="20sp"
            android:background="@drawable/border"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvNama_Cabang"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="15dp"
            android:inputType="text"/>

        <Button
            android:id="@+id/btSIMPAN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btSIMPAN"
            android:textSize="18sp"
            android:backgroundTint="#B5828C"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/etNama_Cabang"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:textAllCaps="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>