<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cvCARD_LAYANAN"
            app:cardCornerRadius="15dp"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvCARD_LAYANAN_ID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#D91656"
                    android:padding="10dp"
                    android:text="@string/tvCARD_LAYANAN_ID"
                    android:textColor="#F5F5F5"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/tvCARD_LAYANAN_NAMA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCARD_LAYANAN_NAMA"
                    android:textSize="16sp"
                    android:layout_marginTop="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>
                <TextView
                    android:id="@+id/tvCARD_LAYANAN_HARGA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCARD_LAYANAN_HARGA"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"/>
                <TextView
                    android:id="@+id/tvCARD_LAYANAN_CABANG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tvCARD_LAYANAN_CABANG"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="8dp"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>
