<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cvCARD_TAMBAHAN"
        app:cardCornerRadius="15dp"
        android:layout_margin="5dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvCARD_TAMBAHAN_ID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCARD_TAMBAHAN_ID"
                android:textSize="14sp"
                android:padding="10dp"
                android:background="#344CB7"
                android:textColor="#C5CAE9"/>
            <TextView
                android:id="@+id/tvCARD_TAMBAHAN_NAMA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCARD_TAMBAHAN_NAMA"
                android:textSize="16sp"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/tvCARD_TAMBAHAN_NOHP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tvCARD_TAMBAHAN_NOHP"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <TextView
                android:id="@+id/tvCARD_TAMBAHAN_TAMBAHAN"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Tambahan"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btHUBUNGI"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btHUBUNGI"
                    android:backgroundTint="#77B254"
                    android:textSize="14sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="5dp"
                    android:textAllCaps="false"/>
                <Button
                    android:id="@+id/btLIHAT"
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:text="@string/btLIHAT"
                    android:backgroundTint="#FF9D23"
                    android:textSize="14sp"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="15dp"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
